# fluida_v4

./: .gitignore  README.md  README.temp.md
Morphogenesis/src/: CMakeLists.txt  InsertParticlesCL__bufI(&m_Fluid, FGCELL).csv  config.json  createDemo2.cpp  fileCL_IO.cpp  fluid_system.cpp  fluid_system.h  host_CL.cpp  host_CUDA.cpp
Morphogenesis/src/kernels/: kernelTest.cl
src/: check_demo.cpp  file_IO.cpp  fluid.h  fluid_system.cpp  fluid_system.h  fluid_system_cuda.cu  fluid_system_cuda.cuh  host_CUDA.cpp  load_sim.cpp  make_demo.cpp  make_demo2.cpp
src/install_scripts/: install_morphogenesis.sh
src/local_run_scripts/: param_sweep.sh
src/run_scripts/: result_summaries.sh
